@@ -256,8 +256,9 @@
   %FIXME proper place (!?)
   Isabelle file specification may contain path variables (e.g.\
   \verb|$ISABELLE_HOME|) that are expanded accordingly.  Note
-  that \verb|~| abbreviates \verb|$HOME|, and \verb|~~| abbreviates \verb|$ISABELLE_HOME|.  The general syntax
-  for path specifications follows POSIX conventions.%
+  that \verb|~| abbreviates \verb|$USER_HOME|, and
+  \verb|~~| abbreviates \verb|$ISABELLE_HOME|.  The
+  general syntax for path specifications follows POSIX conventions.%
 \end{isamarkuptext}%
 \isamarkuptrue%
 %
